SUBDIRS=libstuff ar as misc libobjc2 otool ld64 $(LD_CLASSIC)
ACLOCAL_AMFLAGS = -I m4

man1_MANS=./man/as.1 ./man/checksyms.1 ./man/codesign_allocate.1 ./ld64/doc/man/man1/dyldinfo.1 ./man/indr.1 ./ld64/doc/man/man1/ld.1 \
	./man/libtool.1 ./man/lipo.1 ./man/nm.1 ./man/nmedit.1 ./man/otool.1 ./man/pagestuff.1 \
	./man/ranlib.1 ./man/redo_prebinding.1 ./man/seg_addr_table.1 ./man/segedit.1 ./man/size.1 ./man/strings.1 \
	./man/strip.1


